--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -93,6 +93,8 @@ flashSuccess:
 Seller: Vendeur
 Partner: Apporteur d'affaire
 Catalog: Responsable catalogue
+Backoffice: Backoffice
+'Customer Service': 'Service Client'
 
 # natives messages without structure from EadyAdmin generation
 ID: ID
