--- a/assets/locales/installation.en.json
+++ b/assets/locales/installation.en.json
@@ -20,7 +20,7 @@
   "step2.title": "The admin user can access to /admin",
   "step3.flash.sucess": "Installation completed successfully!",
   "step3.help": "<strong>If you are on prod environment</strong>, you can remove installation files in project :",
-  "step3.instruction": "Your Fastfony installation is successfully finished! <strong>You have received an email with a link to connect</strong>.<br><br>\n\nIf we use default configuration with Mailpit, you can see emails in your browser : <a class=\"underline\" href=\"http://127.0.0.1:8025\" target=\"_blank\">http://127.0.0.1:8025</a><br><br>\n\n<em>Removed installation files is not mandatory. You can close this window.</em>\n",
+  "step3.instruction": "Your Fastfony installation is successfully finished! <strong>You have received an email with a link to connect</strong>.<br><br>\n\nIf we use default configuration with Mailpit, you can see emails in your browser : <a class=\"underline\" href=\"http://127.0.0.1:8025\" target=\"_blank\">http://127.0.0.1:8025</a><br><br>\n\n<em>Removed installation files is not mandatory. You can close this window.</em>",
   "step3.title": "Congrats!",
   "stepper.item.1": "Create .env.local (optional)",
   "stepper.item.2": "Create an admin user",
