feat: upgrade from fastfony/fastfony

--- a/assets/locales/admin.en.json
+++ b/assets/locales/admin.en.json
@@ -1,25 +1,56 @@
 {
+  "Action": "Action",
+  "Back to Page": "Back to page",
   "Categories": "Categories",
   "Category": "Category",
+  "Content": "Content",
   "Created At": "Created At",
   "Dashboard": "Dashboard",
   "Email": "Email",
   "Enabled": "Enabled",
+  "Exit": "Exit",
+  "Group": "Group",
+  "Groups": "Groups",
   "Has Failure Output": "Has Failure Output",
   "Help": "Help",
+  "help.meta_robots": "Default configuration is `index follow`.",
+  "help.noarchive": "Prevents search engines from storing a cached copy of the page.",
+  "help.nofollow": "Prevents search engines from following the links on the page.",
+  "help.noimageindex": "Prevents search engines from indexing the images on the page.",
+  "help.noindex": "Prevents the page from appearing in search results.",
+  "help.nosnippet": "Prevents search engines from showing a snippet of the page's content.",
+  "help.notranslate": "Prevents search engines from offering a translation of the page.",
+  "Homepage": "Homepage",
   "ID": "ID",
   "Key": "Key",
   "Label": "Label",
   "link.logout": "Logout",
   "link.scheduler.index": "Back to scheduler",
+  "Logged At": "Logged at",
   "menu.crud": "CRUD interfaces (EasyAdmin)",
+  "menu.crud.pages": "Pages",
   "menu.crud.parameters": "Parameters",
   "menu.crud.users": "Users",
   "menu.dashboard": "Dashboard",
   "menu.scheduler": "Scheduler",
+  "menu.exit": "Exit",
   "menu.settings": "Settings",
   "Message Context Id": "Message Context Id",
+  "Meta Description": "Description",
+  "Meta robots": "Meta robots configuration",
+  "Meta tags": "Meta tags",
+  "Meta Title": "Title",
   "Name": "Name",
+  "Noarchive": "noarchive",
+  "Nofollow": "nofollow",
+  "Noimageindex": "noimageindex",
+  "Noindex": "noindex",
+  "Nosnippet": "nosnippet",
+  "Notranslate": "notranslate",
+  "Page": "Page",
+  "Page Log Entries": "Page versions",
+  "PageLogEntry": "Page Version",
+  "Pages": "Pages",
   "Parameter": "Parameter",
   "Parameter categories": "Parameter categories",
   "ParameterCategory": "Parameter category",
@@ -36,11 +67,20 @@
   "scheduler.table.scheduler": "Schedule class",
   "scheduler.table.trigger": "Trigger",
   "scheduler.title": "Scheduler",
+  "Revert to this version": "Revert to this version",
+  "Rich Snippets": "Rich snippets",
+  "Role": "",
+  "Roles": "Roles",
+  "SEO": "SEO",
   "Settings": "Settings",
   "settings.description": "Edit value of parameters. Auto-save mode is on. You can also add others <a href=\"/admin/parameter-crud\">here</a>.",
   "Terminated": "Terminated",
   "Updated At": "Updated At",
+  "Slug": "URI path",
+  "Title": "Title",
   "User": "User",
   "user_crud.action.send_login_link_email": "Send a login link",
-  "Users": "Users"
+  "Users": "Users",
+  "Version": "Version number",
+  "View Log Entries": "Show versions"
 }
