--- a/assets/locales/messages.en.json
+++ b/assets/locales/messages.en.json
@@ -4,6 +4,7 @@
   "flash.login_link_sent.error": "An error occured while sending the login link. Please retry.",
   "flash.login_link_sent.success": "An email with login link has been sent to the user.",
   "flash.require_login": "You have to login in order to access this page.",
+  "flash.revert_to_previous_version.success": "The page has been reverted to the selected version.",
   "input.admin_email": "Your email",
   "installation.error": "An error occurred. Please retry.",
   "label.email": "Email address",
