feat(users): matrix permissions groups and roles

--- a/assets/locales/admin.en.json
+++ b/assets/locales/admin.en.json
@@ -32,8 +32,9 @@
   "menu.crud.parameters": "Parameters",
   "menu.crud.users": "Users",
   "menu.dashboard": "Dashboard",
-  "menu.scheduler": "Scheduler",
   "menu.exit": "Exit",
+  "menu.group_role_matrix": "Permissions matrix",
+  "menu.scheduler": "Scheduler",
   "menu.settings": "Settings",
   "Message Context Id": "Message Context Id",
   "Meta Description": "Description",
@@ -55,6 +56,12 @@
   "Parameter categories": "Parameter categories",
   "ParameterCategory": "Parameter category",
   "Parameters": "Parameters",
+  "Revert to this version": "Revert to this version",
+  "Rich Snippets": "Rich snippets",
+  "Role": "",
+  "Role categories": "Role categories",
+  "RoleCategory": "Role category",
+  "Roles": "Roles",
   "Run": "Run",
   "Run Date Formatted": "Run Date",
   "run_crud.title": "Run history of schedule",
@@ -67,20 +74,17 @@
   "scheduler.table.scheduler": "Schedule class",
   "scheduler.table.trigger": "Trigger",
   "scheduler.title": "Scheduler",
-  "Revert to this version": "Revert to this version",
-  "Rich Snippets": "Rich snippets",
-  "Role": "",
-  "Roles": "Roles",
   "SEO": "SEO",
   "Settings": "Settings",
   "settings.description": "Edit value of parameters. Auto-save mode is on. You can also add others <a href=\"/admin/parameter-crud\">here</a>.",
-  "Terminated": "Terminated",
-  "Updated At": "Updated At",
   "Slug": "URI path",
+  "Terminated": "Terminated",
   "Title": "Title",
+  "Updated At": "Updated At",
   "User": "User",
   "user_crud.action.send_login_link_email": "Send a login link",
   "Users": "Users",
   "Version": "Version number",
-  "View Log Entries": "Show versions"
+  "View Log Entries": "Show versions",
+  "warning-matrix": "Modifying a group disconnects all its members."
 }
