feat: upgrade from fastfony/fastfony

--- a/assets/locales/app.en.json
+++ b/assets/locales/app.en.json
@@ -11,5 +11,7 @@
   "Sender email address": "Sender email address",
   "table.group-role-matrix": "Permissions / Groups",
   "This e-mail must be authorize by server configure on MAILER_DSN in .env.local": "This e-mail must be authorize by server configure on MAILER_DSN in .env.local",
+  "toast.error": "An error occured.Please retry.",
+  "toast.parameter.updated": "New value is saved.",
   "Yes": "Yes"
 }
