build: add role categories fixtures installation

--- a/assets/locales/app.en.json
+++ b/assets/locales/app.en.json
@@ -12,6 +12,7 @@
   "table.group-role-matrix": "Permissions / Groups",
   "This e-mail must be authorize by server configure on MAILER_DSN in .env.local": "This e-mail must be authorize by server configure on MAILER_DSN in .env.local",
   "toast.error": "An error occured.Please retry.",
+  "toast.group-role-matrix.toggle.success": "Right successfully saved.",
   "toast.parameter.updated": "New value is saved.",
   "Yes": "Yes"
 }
