--- a/assets/locales/messages.en.json
+++ b/assets/locales/messages.en.json
@@ -5,6 +5,8 @@
   "flash.login_link_sent.success": "An email with login link has been sent to the user.",
   "flash.require_login": "You have to login in order to access this page.",
   "flash.revert_to_previous_version.success": "The page has been reverted to the selected version.",
+  "flash.scheduler.force_run.error": "An error occurred while forcing the recurring message to run.",
+  "flash.scheduler.force_run.success": "The recurring message has been forced to run.",
   "input.admin_email": "Your email",
   "installation.error": "An error occurred. Please verify the configuration and retry.",
   "label.email": "Email address",
