feat: upgrade from fastfony/fastfony

--- a/assets/locales/admin.en.json
+++ b/assets/locales/admin.en.json
@@ -49,6 +49,7 @@
   "Noindex": "noindex",
   "Nosnippet": "nosnippet",
   "Notranslate": "notranslate",
+  "On Registration": "Add during registration",
   "Page": "Page",
   "Page Log Entries": "Page versions",
   "PageLogEntry": "Page Version",
