feat: OAuth2 server and user management login form & reset password (#13)

--- a/assets/locales/admin.en.json
+++ b/assets/locales/admin.en.json
@@ -4,12 +4,11 @@
   "Back to Page": "Back to page",
   "Categories": "Categories",
   "Category": "Category",
+  "Clients": "Clients",
   "Content": "Content",
   "Created At": "Created At",
-  "Dashboard": "Dashboard",
   "Email": "Email",
   "Enabled": "Enabled",
-  "Exit": "Exit",
   "Group": "Group",
   "Groups": "Groups",
   "Has Failure Output": "Has Failure Output",
@@ -35,6 +34,8 @@
   "menu.dashboard": "Dashboard",
   "menu.exit": "Exit",
   "menu.group_role_matrix": "Permissions matrix",
+  "menu.oauth": "OAuth2",
+  "menu.oauth.clients": "Clients",
   "menu.scheduler": "Scheduler",
   "menu.settings": "Settings",
   "Message Context Id": "Message Context Id",
@@ -78,7 +79,6 @@
   "scheduler.table.trigger": "Trigger",
   "scheduler.title": "Scheduler",
   "SEO": "SEO",
-  "Settings": "Settings",
   "settings.description": "Edit value of parameters. Auto-save mode is on. You can also add others <a href=\"/admin/parameter-crud\">here</a>.",
   "Slug": "URI path",
   "Terminated": "Terminated",
