--- a/assets/locales/messages.en.json
+++ b/assets/locales/messages.en.json
@@ -7,11 +7,17 @@
   "flash.revert_to_previous_version.success": "The page has been reverted to the selected version.",
   "flash.scheduler.force_run.error": "An error occurred while forcing the recurring message to run.",
   "flash.scheduler.force_run.success": "The recurring message has been forced to run.",
+  "forgot_password.button": "Send the link",
+  "forgot_password.help": "Enter your email address to receive a link to reset your password.",
+  "forgot_password.link_sent_validity": "If you have an account a link to reset your password has been sent to your email address. This link is valid for 5 minutes.",
+  "forgot_password.title": "Reset your password",
   "input.admin_email": "Your email",
   "installation.error": "An error occurred. Please verify the configuration and retry.",
   "label.email": "Email address",
-  "login.button": "Send me a login link",
+  "label.password": "Password",
+  "login.button": "Log in",
   "login.create_account": "Get started for free",
+  "login.forgot_password": "Forgot password?",
   "login.link_sent_validity": "If you have an account a login link has been sent to your email address. This link is valid for 5 minutes.",
   "login.no_account": "Not a member?",
   "login.title": "Log in to your account",
@@ -20,5 +26,11 @@
   "register.button": "Create an account",
   "register.link_sent_validity": "A login link has been sent to your email address. This link is valid for 5 minutes.",
   "register.login": "Log In",
-  "register.title": "Join us!"
+  "register.title": "Join us!",
+  "request_login_link.button": "Send me a login link",
+  "reset_password.button": "Save this password and connect",
+  "reset_password.email.button": "Reset your password",
+  "reset_password.email.subject": "Reset your password",
+  "reset_password.email.text": "Following your reset password request, here is the link to choose your new password for your account with the e-mail address %email%.",
+  "reset_password.title": "Choose a new password"
 }
