--- a/assets/locales/validators.en.json
+++ b/assets/locales/validators.en.json
@@ -1,4 +1,6 @@
 {
+  "Bad credentials.": "Bad credentials.",
+  "The presented password is invalid.": "Bad credentials.",
   "The role name must start with 'ROLE_'.": "The role name must start with 'ROLE_'.",
   "The string contains a syntax error and it is not encodable to JSON.": "The string contains a syntax error and it is not encodable to JSON.",
   "There can only be one homepage.": "There can only be one homepage."
