feat: upgrade from fastfony/fastfony

--- a/assets/locales/admin.en.json
+++ b/assets/locales/admin.en.json
@@ -2,10 +2,12 @@
   "---": "---",
   "Action": "Action",
   "Back to Page": "Back to page",
+  "bool": "bool",
   "Categories": "Categories",
   "Category": "Category",
   "Clients": "Clients",
   "Content": "Content",
+  "email": "email",
   "Created At": "Created At",
   "Email": "Email",
   "Enabled": "Enabled",
@@ -79,10 +81,14 @@
   "scheduler.table.trigger": "Trigger",
   "scheduler.title": "Scheduler",
   "SEO": "SEO",
+  "Settings": "Settings",
   "settings.description": "Edit value of parameters. Auto-save mode is on. You can also add others <a href=\"/admin/parameter-crud\">here</a>.",
   "Slug": "URI path",
+  "text": "text",
   "Terminated": "Terminated",
   "Title": "Title",
+  "Type": "Type",
+  "url": "url",
   "Updated At": "Updated At",
   "User": "User",
   "user_crud.action.send_login_link_email": "Send a login link",
