--- a/assets/locales/messages.en.json
+++ b/assets/locales/messages.en.json
@@ -17,6 +17,7 @@
   "label.password": "Password",
   "login.button": "Log in",
   "login.create_account": "Get started for free",
+  "login.email.subject": "Your login link to connect %companyName%",
   "login.forgot_password": "Forgot password?",
   "login.link_sent_validity": "If you have an account a login link has been sent to your email address. This link is valid for 5 minutes.",
   "login.no_account": "Not a member?",
