feat: add profile photo

--- a/assets/locales/admin.en.json
+++ b/assets/locales/admin.en.json
@@ -7,8 +7,8 @@
   "Category": "Category",
   "Clients": "Clients",
   "Content": "Content",
-  "email": "email",
   "Created At": "Created At",
+  "email": "email",
   "Email": "Email",
   "Enabled": "Enabled",
   "Group": "Group",
@@ -61,6 +61,7 @@
   "Parameter categories": "Parameter categories",
   "ParameterCategory": "Parameter category",
   "Parameters": "Parameters",
+  "Photo File": "Photo",
   "Revert to this version": "Revert to this version",
   "Rich Snippets": "Rich snippets",
   "Role": "",
@@ -84,16 +85,17 @@
   "Settings": "Settings",
   "settings.description": "Edit value of parameters. Auto-save mode is on. You can also add others <a href=\"/admin/parameter-crud\">here</a>.",
   "Slug": "URI path",
-  "text": "text",
   "Terminated": "Terminated",
+  "text": "text",
   "Title": "Title",
   "Type": "Type",
-  "url": "url",
   "Updated At": "Updated At",
+  "url": "url",
   "User": "User",
   "user_crud.action.send_login_link_email": "Send a login link",
   "Users": "Users",
   "Version": "Version number",
+  "vich_uploader.form_label.delete_confirm": "Delete photo?",
   "View Log Entries": "Show versions",
   "warning-matrix": "Modifying a group disconnects all its members."
 }
