--- a/assets/locales/messages.en.json
+++ b/assets/locales/messages.en.json
@@ -22,6 +22,7 @@
   "login.link_sent_validity": "If you have an account a login link has been sent to your email address. This link is valid for 5 minutes.",
   "login.no_account": "Not a member?",
   "login.title": "Log in to your account",
+  "pages.preview": "This is a preview of your page.",
   "register.agree_with_terms": "By clicking on \"Create an account\" I accept the terms and conditions of use and I have read the confidentiality policy. ",
   "register.already_account": "Already have an Account?",
   "register.button": "Create an account",
