style: change Paramètres en Réglages

--- a/assets/locales/admin.fr.json
+++ b/assets/locales/admin.fr.json
@@ -40,7 +40,7 @@
   "menu.oauth": "OAuth2",
   "menu.oauth.clients": "Clients",
   "menu.scheduler": "Planificateur",
-  "menu.settings": "Paramètres",
+  "menu.settings": "Réglages",
   "Message Context Id": "ID de contexte de message",
   "Meta Description": "Description",
   "Meta robots": "Configuration des robots méta",
