style: changement wording

--- a/assets/locales/admin.fr.json
+++ b/assets/locales/admin.fr.json
@@ -5,7 +5,7 @@
   "bool": "bool",
   "Categories": "Catégories",
   "Category": "Catégorie",
-  "Clients": "Clients",
+  "Clients": "Applications",
   "Content": "Contenu",
   "Created At": "Créé à",
   "email": "Courriel",
