style: changement wording lien admin en gestion des utilisateurs

--- a/assets/locales/front.en.json
+++ b/assets/locales/front.en.json
@@ -1,5 +1,6 @@
 {
   "link.admin": "Admin",
   "link.login": "Login",
-  "link.logout": "Logout"
+  "link.logout": "Logout",
+  "link.user_crud_index": "Users management"
 }
